# carm95_detours

./: .gitignore  CMakeLists.txt  CMakeSettings.json  br_declarations.h  br_types.h  carm95_dummy.c  carm95_hooks.cpp  carm95_libc.c  carm95_s3sound.c  carm95_webserver.c  carm95_webserver.cpp  carm95_webserver_symbols.c  conanfile.py  declarations.h  dr_types.h  extradebug.cpp  generator.py  hook_mingw.def  hook_msvc.def  hookclient.py  hookmain.c  hookmain.cpp  hooks.h  ida_header.h  injector.cpp  injector_main.cpp
.github/workflows/: main.yml  workflow.yaml
BRSRC13/CORE/DOSIO/: eventq.c  eventq.h  readmse.c  readmse.h
BRSRC13/CORE/FW/: assocarr.c  assocarr.h  brbegin.c  brbegin.h  brbhook.c  brbhook.h  brlists.c  brlists.h  brqsort.c  brqsort.h  bswap.c  bswap.h  datafile.c  datafile.h  devlist.c  devlist.h  devsetup.c  devsetup.h  diag.c  diag.h  error.c  error.h  file.c  file.h  fwsetup.c  fwsetup.h  genfile.c  genfile.h  image.c  image.h  lexer.c  lexer.h  loader.c  loader.h  mem.c  mem.h  object.c  object.h  objectc.c  objectc.h  (+18 more)
BRSRC13/CORE/HOST/: himage.c  himage.h  hook.c  hook.h  hostcfg.c  hostcfg.h  hstsetup.c  hstsetup.h  memmgmt.c  memmgmt.h
BRSRC13/CORE/MATH/: angles.c  angles.h  matrix23.c  matrix23.h  matrix34.c  matrix34.h  matrix4.c  matrix4.h  plane.c  plane.h  quat.c  quat.h  transfrm.c  transfrm.h  vector.c  vector.h
BRSRC13/CORE/PIXELMAP/: fontptrs.c  fontptrs.h  genclip.c  genclip.h  gencopy.c  gencopy.h  pixelmap.c  pixelmap.h  pmdsptch.c  pmdsptch.h  pmfile.c  pmfile.h  pmgen.c  pmgen.h  pmmem.c  pmmem.h  pmnull.c  pmnull.h  pmsetup.c  pmsetup.h
BRSRC13/CORE/STD/: brexcept.c  brexcept.h  logwrite.c  logwrite.h  math.c  math.h  stddiag.c  stddiag.h  stdfile.c  stdfile.h  stdlib.c  stdlib.h  stdmem.c  stdmem.h
BRSRC13/CORE/V1DB/: actsupt.c  actsupt.h  custsupt.c  custsupt.h  dbsetup.c  dbsetup.h  def_mat.c  def_mat.h  def_mdl.c  def_mdl.h  def_otab.c  def_otab.h  enables.c  enables.h  matsupt.c  matsupt.h  modrend.c  modrend.h  modsupt.c  modsupt.h  otable.c  otable.h  prepmap.c  prepmap.h  prepmatl.c  prepmatl.h  prepmesh.c  prepmesh.h  preptab.c  preptab.h  regsupt.c  regsupt.h  render.c  render.h  v1dbfile.c  v1dbfile.h
DETHRACE/source/common/: brucetrk.c  brucetrk.h  car.c  car.h  controls.c  controls.h  crush.c  crush.h  cutscene.c  cutscene.h  demo.c  demo.h  depth.c  depth.h  displays.c  displays.h  drfile.c  drfile.h  drmem.c  drmem.h  errors.c  errors.h  finteray.c  finteray.h  flicplay.c  flicplay.h  globvars.c  globvars.h  globvrbm.c  globvrbm.h  globvrkm.c  globvrkm.h  globvrme.c  globvrme.h  globvrpb.c  globvrpb.h  grafdata.c  grafdata.h  graphics.c  graphics.h  (+62 more)
DETHRACE/source/pc-dos/: dosnet.c  dosnet.h  dossys.c  dossys.h
S3/: s3sound.c
include/: carm95_hooks.h  carm95_webserver.h  carm95_webserver_symbols.h  dr_types.h
include/s3/: s3.h
tools/: wrap-global-vars.py
